# sdl_chess

./: .gitignore  Cargo.toml  README.md
src/: alpha_beta.rs  board.rs  drawable.rs  main.rs  sdl_handle.rs  sprite.rs  twc.rs  utils.rs
src/ai/: mod.rs  state.rs
