[package]
name = "sdl_game"
version = "0.1.0"
authors = ["Nicholas-Baron <nicholas.baron.ten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.1.1"
rayon = "1.5"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image"]
